# oarepo-model

./: .check_ok.txt  .gitignore  README.md  oarepo-model-dynamic-object-issue.md  oarepo-model-mapping-system-fields-issue.md  oarepo-model-pid-relation-lazy-import-issue.md  oarepo-model-pid-relation-vocabulary-key-issue.md  oarepo-model-polymorphic-discriminator-issue.md  pyproject.toml  ruff.toml  run-tests.sh  run.sh  setup.py
.github/workflows/: build.yaml  manual.yaml  push.yaml  test.yaml
src/oarepo_model/: __init__.py  api.py  builder.py  cli.py  errors.py  model.py  register.py  sorter.py  utils.py
src/oarepo_model/customizations/: __init__.py  add_base_class.py  add_class.py  add_class_field.py  add_class_list.py  add_dictionary.py  add_entry_point.py  add_facet_group.py  add_file_to_module.py  add_json_file.py  add_list.py  add_mixin.py  add_module.py  add_to_dictionary.py  add_to_list.py  add_to_module.py  base.py  change_base.py  copy_file.py  patch_json_file.py
src/oarepo_model/customizations/high_level/: __init__.py  add_export.py  add_import.py  add_link.py  add_pid_relation.py  add_search_fields.py  add_service_component.py  index_settings.py  set_permission_policy.py  set_synthetic_metadata.py
src/oarepo_model/datatypes/: base.py  boolean.py  collections.py  date.py  entrypoints.py  multilingual.py  numbers.py  polymorphic.py  registry.py  relations.py  strings.py  vocabularies.py  wrapped.py
src/oarepo_model/presets/: __init__.py  base.py  sqlalchemy.py
src/oarepo_model/presets/custom_fields/: __init__.py  ext.py
src/oarepo_model/presets/custom_fields/records/: api.py  custom_fields_relation.py  draft.py  draft_mapping.py  jsonschema.py  mapping.py
src/oarepo_model/presets/custom_fields/services/: component.py  schema.py
src/oarepo_model/presets/drafts/: __init__.py  ext.py  ext_draft_files.py  ext_draft_media_files.py  ext_media_files.py
src/oarepo_model/presets/drafts/file_records/: draft_file_mapping.py  draft_record_metadata.py  draft_with_files.py  draft_with_media_files.py  file_draft_metadata.py  media_file_draft.py  media_file_draft_metadata.py  media_file_metadata.py  media_file_record.py  record_media_files.py  record_with_media_files.py
src/oarepo_model/presets/drafts/files/: draft_file_mapping.py  draft_media_files.py  draft_with_files.py  draft_with_files_metadata.py  draft_with_media_files.py  file_draft.py  file_draft_metadata.py  media_file_draft_metadata.py  media_file_metadata.py  (+3 more)
src/oarepo_model/presets/rdm/: __init__.py  ext.py
src/oarepo_model/presets/records_resources/: __init__.py  api_blueprint.py  app_blueprint.py  ext.py  ext_files.py  proxy.py
src/oarepo_model/presets/relations/: __init__.py  ext.py  record_relations.py
src/oarepo_model/presets/ui/: __init__.py  ext.py  ui_metadata.py  ui_record.py
src/oarepo_model/presets/ui_links/: drafts_ui_links.py  ext.py  records_ui_links.py
tests/: conftest.py  test_customizations.py  test_draft_builder.py  test_entry_points.py  test_metadata_load.py  test_model.py  test_model_metadata_registration_presets.py  test_parent_model_field.py  test_rdm_builder.py
tests/api_tests/: conftest.py  test_custom_fields.py  test_draft_crud.py  test_facets.py  test_feature_presets.py  test_imports.py  test_multilingual.py  test_rdm_crud.py  test_relations.py  test_resolvers.py  test_resource_crud.py  test_service_crud.py  test_set_permission_policy.py  test_signposting.py  test_synthetic.py  test_ui_links.py  test_vocabularies.py
tests/customizations/: test_change_base.py  test_dictionary.py  test_index_modification.py  test_lazy_pid_field_proxy.py  test_links.py  test_service_components.py  test_synthetic_metadata.py
tests/datatypes/: conftest.py  test_array_facet_label.py  test_collections_extra.py  test_datatype_registry.py  test_dynamic_object.py  test_facet_label_propagation.py  test_multilingual.py  test_numbers_extra.py  test_pid_relation_lazy_import.py  test_pid_relation_vocab_key.py  test_polymorphic.py  test_registry_extra.py  test_schemas.py  test_strings_extra.py  test_ui_model.py  test_ui_schemas.py
tests/mock_module/: __init__.py
tests/presets/: test_record_mapping_dynamic.py
(+113 files in other folders)
