[project]
name = "oarepo-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mirek Simek", email = "miroslav.simek@gmail.com" }
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "oarepo-runtime",
    "graphlib",
    "oarepo[rdm,tests]>=13.0.0,<14.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-model"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
]
tests = [
    "pytest-invenio",
]

[project.entry-points."oarepo_model.datatypes"]
oarepo_model = "oarepo_model.datatypes.entrypoints:DATA_TYPES"

[tool.mypy.overrides]
module = ["untyped_package.*"]
follow_untyped_imports = true


[tool.ruff]
target-version = "py313"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [ "ALL" ]
ignore = [
    "FIX002",  # exclude TODO comments
    "TD003",   # Missing issue link for this TODO
    "TD002",   # Missing author in TODO
    "N806",    # Variable name should be lowercase as we dynamically create classes
    "ANN204",  # Missing return type annotation for __init__
    "ANN401",  # Any in *args/**kwargs
    "TRY003",  # Avoid long exception messages
    "EM101",   # Avoid using string literal in exception
    "EM102",   # Avoid using f-string literal in exception
    "TRY301",  # Avoid raising/catching the same exception type
    "PLC0415",  # Place imports to the top of the file
    "PGH004",  # Use specific noqa for pylint
    "TID252",  # Prefer absolute imports
    "D203",    # Using D211
    "D213",    # Using D212 (multi-line-summary-first-line) instead
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = [
    "E402", 
    "S101", 
    "ANN001", 
    "ARG001", 
    "D103", 
    "ANN201", 
    "D100",
    "INP",
    "PLR",
    "PLC"
    ]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src"
]