[project]
name = "oarepo-model"
version = "1.0.1"
description = "Dynamic models for InvenioRDM"
readme = "README.md"
authors = [
    { name = "Mirek Simek", email = "miroslav.simek@gmail.com" }
]
requires-python = ">=3.14,<3.15"
dependencies = [
    "oarepo-runtime>=3.0.0,<4.0.0",
    "graphlib",
    "oarepo[rdm,tests]>=14.0.0,<15.0.0",
    "deepmerge>=2.0",
    "dotenv>=0.9.9",
    "marshmallow-i18n-messages>=0.1.0",

    # invenio dependencies
    "invenio-rdm-records>=27.0.0,<28.0.0",
]

[project.urls]
Homepage = "https://github.com/oarepo/oarepo-model"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.13",
    "types-PyYAML",
    "oarepo-invenio-typing-stubs",
]
tests = [
    "pytest-invenio",
]
oarepo14=[
    "oarepo[rdm]>=14,<15",
]


[project.entry-points."oarepo_model.datatypes"]
oarepo_model = "oarepo_model.datatypes.entrypoints:DATA_TYPES"

[project.entry-points."oarepo.cli"]
oarepo_model = "oarepo_model.cli:model"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src"
]

[tool.hatch.metadata]
allow-direct-references = true
